--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -4,10 +4,8 @@
 #header {
   position: sticky;
   top: 0;
-  /* left: 0; */
-  z-index: 1001;
-  /* height: 10vh; */
-  /* min-height: 80px; */
+  left: 0;
+  z-index: 1005;
 }
 
 /*
